# Solana-Lottery-Dapp

./: readme.md
app/: package-lock.json  package.json
app/components/: Header.js
app/pages/: index.js
contract/: .gitignore  Cargo.toml
contract/src/: constants.rs  error.rs  lib.rs
frontend/: package-lock.json  package.json
frontend/app/utils/: helper.ts  idl.json  program.ts
frontend/components/common/: Header.tsx
frontend/components/home/: HistoryTable.tsx  PotCard.tsx
frontend/context/: context.tsx
thing/: package-lock.json  package.json  tsconfig.json
thing/app/: layout.tsx  page.tsx
thing/app/utils/: constants.ts  program.ts
thing/components/common/: Header.tsx
thing/components/home/: HistoryTable.tsx  PotCard.tsx
thing/components/providers/: SolanaProvider.tsx
thing/context/: context.tsx
